# lung_modelling

./: .gitignore  README.md  convert_exfile.py  pyproject.toml  setup.cfg
convert_exfile/: convert_exfile_app.py
docs/: README.rst  app.rst  conf.py  index.html  index.rst  module_reference.rst  task_reference.rst  workflow_manager.rst
docs/_build/doctrees/: README.doctree  app.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  module_reference.doctree  task_reference.doctree  user_guide.doctree  workflow_manager.doctree
docs/_build/html/: .buildinfo  README.html  app.html  examples.html  genindex.html  index.html  installation.html  module_reference.html  objects.inv  py-modindex.html  search.html  searchindex.js  task_reference.html  (+2 more)
docs/_static/: custom.css
lung_modelling/: __init__.py  __main__.py
lung_modelling/app/: index_directory.py  plot_dicom.py  plot_image.py  plot_meshes.py  run_workflow.py  shapeworks_tasks.py  tasks.py
lung_modelling/libs/: __init__.py  copdgene_dataset_analysis.py  meshing.py  utils.py
lung_modelling/shapeworks_libs/: __init__.py  pca_embedder.py
lung_modelling/workflow_manager/: __init__.py  workflow_manager.py
shapeworks_tests/: README.md  test_mesh_transformation.py  test_pca.py  test_reference_selection.py  test_shapeworks_tasks.py  test_smooth.py
shapeworks_tests/test_data/: m03.vtk
tests/: README.md  t_workflow_manager.py  test_meshing.py  test_utils.py  test_workflow_manager.py
tests/test_data/: covid_lung_001_right_with_islands.vtk  test_file.mhd  test_file.stl  test_file.zraw
(+27 files in other folders)
