[metadata]

[options]
packages = find:
install_requires =
    pyvista
    pandas
    medpy
    scikit-image
    numpy-stl
    tqdm
    meshio
    pyvista_tools @ git+https://github.com/acreegan/pyvista_tools.git
    scipy
    multiprocess
    loguru
    hydra-core
    SimpleITK

[options.extras_require]
dev =
    pytest
    sphinx


[options.package_data]
* = *
