[metadata]

[options]
packages = find:
install_requires =
    pyvista>=0.43
    pandas
    medpy
    scikit-image
    numpy-stl
    tqdm
    meshio
    pyvista_tools @ git+https://github.com/acreegan/pyvista_tools.git
    scipy
    multiprocess
    loguru
    hydra-core
    SimpleITK
    pyacvd
    connected-components-3d
    tetrahedralizer @ git+https://github.com/ABI-EIT/tetrahedralizer
    pyeit

[options.extras_require]
dev =
    pytest
    sphinx

[options.packages.find]

[options.package_data]
* = *
